kube/site/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: rndir
---
kind: Namespace
apiVersion: v1
metadata:
  name: cert-manager
