kube/site/site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rndir-ingress
  namespace: rndir
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.org/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "rndir.cc"
    secretName: cert-rndir-cc
  rules:
  - host: rndir.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port: 
              number: 80
